force-app/main/default/objects/NPN_Onboarding_Competency_GPU_Genius_Map__mdt/NPN_Onboarding_Competency_GPU_Genius_Map__mdt.object-meta.xml
<CustomObject>
    <description>Default Value for specific Program Type</description>
    <label>NPN Onboarding Competency GPU Genius Map</label>
    <pluralLabel>NPN Onboarding Competency GPU Genius Map</pluralLabel>
</CustomObject>