force-app/main/default/objects/NPN_Onboarding_Competency_GPU_Genius_Map__mdt/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <label>Competency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>