force-app/main/default/objects/NPN_Onboarding_Competency_GPU_Genius_Map__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Program_Type__c</columns>
    <columns>Competency__c</columns>
    <columns>Role__c</columns>
    <columns>GPU_Genius_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>